# Sofar_assignment

./: README.md  run.sh
src/two_robot_nav/: package.xml  setup.cfg  setup.py
src/two_robot_nav/launch/: bringup_launch.py  localization_launch.py  multirobot_launch.py  navigation2_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  tb3_launch.py
src/two_robot_nav/resource/: nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml  nav2_params.yaml
